Fix to preloader so it always covers the full screen.

--- a/source/scss/_generics.scss
+++ b/source/scss/_generics.scss
@@ -37,6 +37,9 @@ body {
 
 .preloader {
 	z-index: 9999999999;
+	position: fixed;
+	top: 0;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
